--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -651,23 +651,24 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 
 ### 101
 
-| APP           | Version | Port                                                         | Proxy Port                               | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
-| ------------- | ------- | ------------------------------------------------------------ | ---------------------------------------- | ------------------- | -------------- |
-| ssh           |         | 22                                                           | -                                        | 11068               |                |
-| ProFTPD       | 1.3.8   | 21, 11990-11999                                              | -                                        | 11057, 11990-11999  |                |
-| HAProxy       | 2.8.3   | 9188                                                         | -                                        | 11672               |                |
-| MySql         | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
-| Redis         | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
-| ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 10519, 10550                             | 11519, 11550        |                |
-| ElasticSearch | 7.17.7  | 9207[http], 9307[tcp]                                        | 10508, 10539                             | 11508, 11539        |                |
-| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 18848(10668), 19848(10709), 19849(10720) | 11668, 11709, 11720 | 是             |
-| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667                             | 11443, 11667        |                |
-| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                             | 11494, 11535        | 是             |
-| RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,                     | 11575, 11574, 11563 |                |
-| Zipkin        | 2.24.3  | 9411[dashboard]                                              | 10527                                    | 11527               |                |
-| Nginx         | 1.24.0  | 80                                                           |                                          |                     |                |
-| Zookeeper     | 3.8.4   | 2181                                                         | -                                        | 11308               |                |
-| Kafka         | 3.8.0   | 9092                                                         | -                                        | 11598               |                |
+| APP                         | Version | Port                                                         | Proxy Port                               | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
+| --------------------------- | ------- | ------------------------------------------------------------ | ---------------------------------------- | ------------------- | -------------- |
+| ssh                         |         | 22                                                           | -                                        | 11068               |                |
+| ProFTPD                     | 1.3.8   | 21, 11990-11999                                              | -                                        | 11057, 11990-11999  |                |
+| HAProxy                     | 2.8.3   | 9188                                                         | -                                        | 11672               |                |
+| MySql                       | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
+| Redis                       | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
+| ElasticSearch               | 8.10.4  | 9208[http], 9308[tcp]                                        | 10519, 10550                             | 11519, 11550        |                |
+| ElasticSearch               | 7.17.7  | 9207[http], 9307[tcp]                                        | 10508, 10539                             | 11508, 11539        |                |
+| Nacos                       | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 18848(10668), 19848(10709), 19849(10720) | 11668, 11709, 11720 | 是             |
+| Sentinel                    | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667                             | 11443, 11667        |                |
+| Seata                       | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                             | 11494, 11535        | 是             |
+| RabbitMQ                    | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,                     | 11575, 11574, 11563 |                |
+| Zipkin                      | 2.24.3  | 9411[dashboard]                                              | 10527                                    | 11527               |                |
+| Nginx                       | 1.24.0  | 80                                                           |                                          |                     |                |
+| Zookeeper                   | 3.8.4   | 2181                                                         | -                                        | 11308               |                |
+| Kafka                       | 3.8.0   | 9092                                                         | -                                        | 11598               |                |
+| MicArray_Sound_Localization |         | 10001、10002、10003                                          | -                                        | 11012、11023、11034 |                |
 
 
 
