--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -2276,6 +2276,7 @@ host.name=192.168.31.101
 num.partitions=3
 inter.broker.listener.name=PLAINTEXT
 listeners=PLAINTEXT://:9092
+# 如果是代理地址端口，建议 advertised.listeners=代理地址端口
 advertised.listeners=PLAINTEXT://192.168.31.101:9092
 # listeners就是主要用来定义Kafka Broker的Listener的配置项，用于本机监听。
 # advertised.listeners参数的作用就是将Broker的Listener信息发布到Zookeeper供客户端使用监听，是真正的对外代理地址。如果没有设置，会用listeners。
