--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -147,6 +147,30 @@ x y
 
 
 
+## 设置
+
+### 保存预设到1、2、3档
+
+[ILCE-7RM5 | 帮助指南 | 拍摄设置存储](https://helpguide.sony.net/ilc/2230/v1/zh-cn/contents/TP0002889138.html)
+
+1. 设置好参数
+2. MENU -> 拍摄 -> 照相模式 -> 拍摄设置存储 -> 选择需要存储在哪一个档位 -> 确认
+
+
+
+### 拍摄设置注册到自定义键并在按住该键期间暂时将其调出
+
+[ILCE-7RM5 | 帮助指南 | 将拍摄设置注册到自定义键（注册自定义拍摄设置）](https://helpguide.sony.net/ilc/2230/v1/zh-cn/contents/TP0002925207.html)
+
+1. MENU -> 拍摄 -> 照相模式 -> 注册自定义拍摄设置 -> 从［调出自定保持1］至［调出自定保持3］中选择注册号码
+2. 设置好暂时将其调出的参数
+3. 选择注册
+4. MENU -> 设置 -> 操作自定义 -> 自定键/转盘设置 -> 选择所需键
+5. 从［调出自定保持1］至［调出自定保持3］中选择一个注册号码
+6. 在拍摄画面上，在按住分配了注册号码之一的键期间按快门按钮。在按住自定义键期间，所注册的设置被启用
+
+
+
 ## Base ISO
 
 
