--- a/solid/系统架构师.MD
+++ b/solid/系统架构师.MD
@@ -24,7 +24,7 @@
 
 ### 系统工程方法
 
-#### 霍尔三维结构
+#### **霍尔三维结构**
 
 ##### 逻辑维
 
@@ -80,35 +80,251 @@
 
 建筑、工商
 
-法律
-
-管理
+法律、管理
 
 
 
 #### 切克兰德方法
 
+##### 认识问题
+
+实地考察公园、与公园管理员、游客、维护人员等进行交流，收集他们对现状的看法，如公园保洁不足、娱乐设施老化等问题。
+
+##### 根底定义
+
+对于每个关键问题制定根底定义，比如，“公园维护系统”可能有这样的根底定义：“一个旨在提供清洁、安全、愉悦环境的服务系统。”
+
+##### 建立概念模型
+
+依据“公园维护系统”的根底定义，构建一个包括垃圾回收、设施检查、游客反馈处理等活动的概念模型。
+
+##### 比较及探寻
+
+把概念模型与实际的公园运营情况相比较，识别出哪些是按照概念模型运作得好的地方，哪些是存在差异的地方，并探讨为什么会有这种差异。
+
+##### 选择
+
+决定一系列改变，例如增加保洁人员、更新娱乐设施、创建游客反馈系统等，这些都是在现实条件下可行且期望达到的改变。
+
+##### 设计与实施
+
+制定具体行动计划来实施这些改变，比如招聘更多的保洁人员、购置新的设施或开发一个在线反馈平台。
+
+##### 评估与反馈
+
+在实施后，持续对改变效果进行监测和评估，收集游客、员工的反馈，并根据反馈结果调整行动计划。
+
 
 
 #### 并行工程方法
+
+并行工程方法（Concurrent Engineering, CE）是一种现代产品开发理念，它打破传统的串行开发模式（每个阶段依次进行），而是通过让多个开发过程并行进行来加速产品从概念到市场的整个过程。
+
+##### 产品设计开发期间，最快速度按质完成
+
+​	这指在产品的设计与开发期间，各个相关的工作流程如设计、分析、测试和评估等应该尽可能同时进行，而不是一个完成后另一个才开始。
+​	比如，汽车开发中，往往需要团队分别完成内饰设计、安全性分析、动力系统设计等任务。在并行工程中，这些团队会同时工作，互相交换信息，以确保设计的每个部分都能协同工作，从而在确保产品质量的前提下提高开发速度。
+
+##### 各项工作问题协调解决
+
+​	并行工程要求团队成员之间有高效的沟通与协调机制，从而实时解决跨功能的问题。
+​	采用这种方法的公司可能会组建跨部门的项目团队，团队成员包括来自设计、工程、制造、物料管理、质量控制等部门的专家。当设计师提出新的组件设计时，生产部门可以立刻评估其制造可行性，并给出反馈，以便设计可以及时调整，减少后期修改的时间和成本。
+
+##### 适当的信息系统工具
+
+​	并行工程还需要支持信息共享和协作的工具和系统，如计算机辅助设计（CAD）、计算机辅助工程（CAE）、产品生命周期管理（PLM）软件等。
+​	这类工具可以帮助团队成员在全球范围内实时共享设计文件、测试数据和进度报告，以确保所有人都能访问到最新信息，并基于这些信息做出快速响应。
+
+
 
 
 
 #### 综合集成方法
 
+综合集成法是中国科学家钱学森在对复杂系统（尤其是巨系统）研究中提出的一种系统工程方法。它涉及到如何将不同的系统元素、子系统和过程整合到一个统一的框架中，以解决大规模、多方面和高度复杂的问题
+
+##### 整体论原则
+
+整体论强调要从整体上理解系统，认识到整个系统的行为和特性不仅仅是各部分简单相加的结果。
+应用到城市交通系统中，整体论原则意味着我们不能仅仅关注单一的交通工具或某条道路的流量问题，而是需要考虑整个城市交通网络如何高效协同工作。例如，街道规划、公共交通布局、交通信号系统等都需要被综合考虑，以确保整个城市的交通流动性和安全性。
+
+##### 相互联系原则 
+
+系统中的各个部分并非孤立存在，它们之间存在着复杂的相互联系和依赖。
+在城市交通系统中，相互联系原则反映在各种交通要素之间的依存关系。例如，公共汽车服务的有效性受到道路状况、交通拥堵程度和乘客需求的影响。这些因素相互作用，共同影响整个系统的性能。修建一个新的地铁线路可能会减少道路上的车辆数量，从而影响交通拥堵情况。
+
+##### 有序性原则
+
+即使在看似混乱的系统中也存在着某种程度的有序性，通过寻找和利用这种有序性可以更有效地组织和管理系统。
+虽然城市交通看起来可能很混乱，但实际上它遵循一定的规律和有序性。比如，交通高峰时段的出现是有规律的，红绿灯的交替也是有序进行的。理解并应用有序性原则可以帮助我们预测交通流量模式，并据此设计更有效的交通控制和引导策略，比如设定巴士专用道，或者在交通高峰期调整信号灯时长
+
+##### 动态原则
+
+系统是动态变化的，它们随时间演进并且响应外部和内部的变化。
+城市交通系统是不断变化的：道路可能需要维修，新的购物中心开业可能增加特定区域的交通流量，节假日可能会导致特殊的交通模式等。动态原则要求我们不断监测和评估这些变化，并适时调整交通规划和管理策略。比如，根据季节性活动（如马拉松赛事）或长期趋势（如城市扩张）调整交通规划。
 
 
-#### WAR系统方法
+
+#### WSR系统方法
+
+WSR系统方法是由中国著名系统工程专家吴敬琏提出的，它被认为是解决复杂社会、经济问题的一种实践导向的系统分析方法。WSR代表“物”、“事”、“人”，这三个字分别触及了系统方法应用中需要考虑的三个关键维度：技术层面（物理）、管理层面（事理）和人文层面（人理）。
+
+##### 懂物理
+
+​	在任何系统问题中，首先要对所涉及的技术或物质条件有深入的理解。这包括了解系统的物理组成、技术特性和操作原理等。
+​	例如，在一个供水系统中，“懂物理”意味着要了解水管的材料、泵的工作原理、供水网络的布局等。
+
+##### 明事理
+
+​	接着，需要清楚地把握系统运行的规则、程序、法律法规以及管理策略等。这些都是影响系统效能的重要因素。
+​	在供水系统的案例中，“明事理”可能涉及到水资源的管理策略、维持供水安全的政策，以及维修和升级供水设施的计划。
+
+##### 通人理
+
+​	最后，也是最重要的一点是，必须认识到系统操作和发展受到人的行为、需求、文化和价值观的影响。有效的系统方法需要考虑到其影响的利益相关者和用户群体。
+​	对于供水系统，这意味着要考虑用户的用水习惯、支付意愿、节水意识等，同时还要理解和预测社会发展对水资源需求的变化。
 
 
 
 ### 系统工程生命周期阶段及方法
 
+探索性研究
+
+概念阶段
+
+开发阶段
+
+生产阶段
+
+使用阶段
+
+保障阶段
+
+退役阶段
+
 
 
 ## 信息系统基础
 
+### 信息系统生命周期
+
+#### 产生阶段
+
+#### 开发阶段
+
+总体规划
+
+系统分析
+
+系统设计
+
+系统实施
+
+系统验收
+
+#### 运行阶段
+
+#### 消亡阶段
+
+
+
+### 信息系统建设原则
+
+##### 高层管理人员介入原则
+
+##### 用户参与开发原则
+
+##### 自顶向下规划原则
+
+##### 工程化原则
+
+
+
+### 信息系统开发方法
+
+#### 结构化方法
+
+自顶向下，逐步分解求精
+
+开发目标清晰化、工作阶段程式化
+开发文档规范化、设计方法结构化
+
+应变能力差
+
+#### 面向对象方法
+
+​		自底向上
+​		阶段界线不明
+​		更好的应变、更好复用
+​		符合人们的思维习惯
+
+#### 面向服务的方法
+
+​		粗粒度、松耦合
+​		标准化和构件化
+​		抽象级别：操作->服务->业务流程
+
+#### 其他方法
+
+##### 形式化方法
+
+​			形式化开发方法是应用数学和逻辑的严格技术，以确保软件或系统设计的正确性和一致性。
+
+##### 统一过程方法【up】
+
+​			统一过程方法（Unified Process, UP）是一个迭代和增量的软件开发框架，旨在通过结构化的阶段和多个迭代来逐步细化和完善软件产品。
+
+##### 敏捷方法
+
+​	敏捷方法是一组灵活、迭代的软件开发实践，旨在快速响应需求变化并促进跨职能团队之间的密切协作。
+
+##### 基于架构的开发方法【ABSD】
+
+​		基于架构的开发方法是一种以软件系统的结构设计为核心，围绕创建、维护和演化系统架构来组织开发活动的方法。
+
+
+
+### 信息系统的分类
+
+#### 业务处理系统【TPS】
+
+包含五个活动：数据输入、业务处理、文件和数据库处理、文件和报告产生、查询处理活动
+
+
+
+#### 管理信息系统【MIS】
+
+
+
+#### 决策支持系统【DSS】
+
+
+
+#### 专家系统【ES】
+
+
+
+#### 办公自动化系统【OA】
+
+
+
+#### 企业资源计划【ERP】
+
+
+
+### 案例题
+
+​	
+
+		答案：D A B
+
+
+
 
 
 ## 企业信息化
+
+
+
+
 
