--- a/solid/摄影.MD
+++ b/solid/摄影.MD
@@ -171,13 +171,25 @@ x y
 
 
 
+### 测光
+
+曝光/颜色 -> 测光 -> 点测光点 -> 对焦点联动
+
+
+
+### 对焦
+
+对焦点+跟踪
+
+
+
 ## Base ISO
 
 
 
 
 
-## 色调
+## 创意外观
 
 设置 -> 曝光/颜色 -> 颜色/色调 -> 创意外观
 
@@ -189,7 +201,7 @@ x y
 - VV：色彩浓郁，对比度高，适合色彩丰富的场景
 - VV2：对比度比VV低，画面更明亮
 - FL：胶片感浓郁，很适合树林蓝天等场景，胶片蓝和胶片绿质感出众，拍人像也很优秀
-- IN：低饱和低对比，文艺风的福音，自带日系哑光效果，拍摄人像很有氛围感，拍摄花朵也很好看（如图3）
+- IN：低饱和低对比，文艺风的福音，自带日系哑光效果，拍摄人像很有氛围感，拍摄花朵也很好看
 - SH：比IN明亮清新，适合日系小清新风格
 - BW：经典黑白色调，明暗对比恰到好处，随手拍大片的即视感
 - SE：复古棕色调，适合复古场景，很有格调
@@ -210,14 +222,16 @@ x y
 
 ## 视频
 
+[理解点对点 / 超采样 / 欠采样 / 跳采 / 像素合并 - 知乎](https://zhuanlan.zhihu.com/p/602143410)
+
  
 
 | 模式         | 裁切 | 采样        | 读出速度(ms) |
 | ------------ | ---- | ----------- | ------------ |
-| 4K24P        | 1    | 4.8K 超采样 | 18.6         |
-| 4K60P        | 1.24 | 3.8K 欠采样 | 15           |
-| S35模式4K24P | 1.52 | 6.3K 超采样 | 30.9         |
-| 8K24P        | 1.24 | 7.6K 欠采样 | 38.1         |
+| 4K24P        | 1    | 像素合并    | 18.6         |
+| 4K60P        | 1.24 | 像素合并    | 15           |
+| S35模式4K24P | 1.5  | 6.2K 超采样 | 31           |
+| 8K24P        | 1.24 | 点对点      | 38           |
 
 
 
