--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -26573,6 +26573,10 @@ git config -e [--global]
 git config [--global] user.name "[name]"
 git config [--global] user.email "[email address]"
 
+# 撤销配置
+ git config [--global] --unset user.name
+ git config [--global] --unset user.email
+
 # 项目文件名是否忽略大小写
 git config [--global] core.ignorecase=false
 ```
