--- a/docs/大数据.MD
+++ b/docs/大数据.MD
@@ -1,5 +1,7 @@
 # Hadoop
 
+Hadoop 是一个开源的分布式计算和存储框架，由 Apache 基金会开发和维护。
+
 ## 相关概念
 
 ### HDFS
@@ -40,9 +42,9 @@ MapReduce 的含义就像它的名字一样浅显：Map 和 Reduce (映射和规
 
 ```shell
 # Java 运行环境
-scp H:\Packages\Linux\Java\jdk-8u321-linux-i586.tar.gz young@192.168.31.101:/home/young/packages/
-sudo tar -zxvf /home/young/packages/jdk-8u321-linux-i586.tar.gz -C /opt/apps/
-sudo mv /opt/apps/jdk1.8.0_321 /opt/apps/jdk1.8.0
+scp H:\Packages\Linux\Java\jdk-8u441-linux-x64.tar.gz young@192.168.31.101:/home/young/packages/
+sudo tar -zxvf /home/young/packages/jdk-8u441-linux-x64.tar.gz -C /opt/apps/
+sudo mv /opt/apps/jdk1.8.0_441 /opt/apps/jdk1.8.0
 
 # SSH 环境
 systemctl enable ssh && systemctl start ssh
@@ -96,13 +98,13 @@ hadoop  ALL=(ALL)       ALL
 
 
 
-`cd $HADOOP_HOME/etc/hadoop`
+在每个节点进行以下配置
 
-#### 命名节点
 
-workers
 
-`sudo vim workers `
+#### workers
+
+`sudo vim $HADOOP_HOME/etc/hadoop/workers `
 
 ```shell
 192.168.31.102
@@ -111,9 +113,9 @@ workers
 
 
 
-core-site.xml
+#### core-site.xml
 
-`sudo vim core-site.xml `
+`sudo vim $HADOOP_HOME/etc/hadoop/core-site.xml `
 
 ```xml
     <!-- 配置 HDFS 主机地址与端口号 -->
@@ -130,9 +132,9 @@ core-site.xml
 
 
 
-hdfs-site.xml
+#### hdfs-site.xml
 
-`sudo vim hdfs-site.xml `
+`sudo vim $HADOOP_HOME/etc/hadoop/hdfs-site.xml `
 
 ```xml
     <!-- 每个数据块复制 2 份存储 -->
@@ -150,27 +152,43 @@ hdfs-site.xml
 
 
 
-hadoop-env.sh
+#### hadoop-env.sh
 
-`sudo vim hadoop-env.sh`
+`sudo vim $HADOOP_HOME/etc/hadoop/hadoop-env.sh`
 
-`JAVA_HOME=/opt/apps/jdk1.8.0`
+```shell
+export JAVA_HOME=/opt/apps/jdk1.8.0
+# NameNode 内存限制
+export HDFS_NAMENODE_OPTS="-Xmx4g -Xms4g"
+
+# DataNode 内存限制
+export HDFS_DATANODE_OPTS="-Xmx2g -Xms2g"
+
+# ResourceManager 内存限制
+export YARN_RESOURCEMANAGER_OPTS="-Xmx2g -Xms2g"
+
+# NodeManager 内存限制
+export YARN_NODEMANAGER_OPTS="-Xmx2g -Xms2g"
+
+# 历史服务器内存
+export MAPRED_HISTORYSERVER_OPTS="-Xmx2g"
+```
 
 
+
+### 设置SSH免密登录
 
 ```shell
 su hadoop
-# 其中一台机器生成 SSH 密钥
+# 在NameNode上生成密钥对
 ssh-keygen -t rsa -P "" -f ~/.ssh/id_rsa
+# 并将公钥复制到所有节点（包括自己）
+ssh-copy-id -i ~/.ssh/id_rsa.pub hadoop@localhost
+ssh-copy-id -i ~/.ssh/id_rsa.pub hadoop@192.168.31.102
+ssh-copy-id -i ~/.ssh/id_rsa.pub hadoop@192.168.31.103
 
-scp ~/.ssh/id_rsa hadoop@192.168.31.102:/home/hadoop/.ssh/
-scp ~/.ssh/id_rsa.pub hadoop@192.168.31.102:/home/hadoop/.ssh/
-scp ~/.ssh/id_rsa hadoop@192.168.31.103:/home/hadoop/.ssh/
-scp ~/.ssh/id_rsa.pub hadoop@192.168.31.103:/home/hadoop/.ssh/
-
-# 密钥添加到信任列表
-# 所有机器执行
-ssh-copy-id -i ~/.ssh/id_rsa hadoop@localhost
+# 测试，应该不需要密码
+ssh hadoop@192.168.31.102
 ```
 
 
@@ -186,10 +204,22 @@ su hadoop
 hdfs namenode -format
 
 # 启动 HDFS
-start-dfs.sh
-stop-dfs.sh
+$HADOOP_HOME/sbin/start-dfs.sh
+$HADOOP_HOME/sbin/stop-dfs.sh
 # 启动分三个步骤，分别启动 NameNode、DataNode 和 Secondary NameNode
 # 命名节点不存在 DataNode 进程
 # 运行 jps 查看 Java 进程
 ```
+
+
+
+配置 systemctl 服务自动启动
+
+[hadoop.service](../files/scripts/server/hadoop.service)
+
+
+
+
+
+# Flink
 
