--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1241,6 +1241,186 @@ exit 0
 
 
 
+
+
+#### 自定义systemctl服务
+
+服务单元文件存放位置
+
+systemd服务单元文件通常存放在以下两个目录之一：
+
+\- **系统级服务**：`/etc/systemd/system/`（管理员自定义服务优先存放位置，自定义服务应放在该目录下）
+
+\- **软件包安装的服务**：`/usr/lib/systemd/system/`（一般不要直接修改这里）
+
+
+
+##### 创建服务单元文件
+
+```shell
+[Unit]
+# 必填：服务描述
+Description=My Custom Python Application
+
+# 强依赖的服务（如果依赖服务启动失败，本服务也不会启动），强依赖MySQL
+# Requires=mysql.service
+
+# 弱依赖（尽可能启动依赖服务，但不强制）
+# Wants=mysql.service
+
+# 定义启动顺序，表示在网络启动后运行，多个服务用空格分隔
+After=network.target
+
+# 冲突服务（不能同时运行）
+# Conflicts=old-service.service
+
+
+[Service]
+# Type：进程类型（常用 simple 或 forking）
+#   simple：默认类型，前台运行的服务。启动后立即视为活动状态，ExecStart 的进程是主进程
+#   forking：传统后台守护进程，ExecStart 的进程会 fork 子进程后退出
+#   oneshot：执行单次任务，任务完成后服务自动停止（非守护进程）
+#   dbus：D-Bus 服务，获取 D-Bus 名称后启动
+#   notify：服务就绪时发送通知，需要服务支持 sd_notify()
+#   idle：延迟启动（系统空闲时），避免与其他服务启动竞争
+Type=simple
+
+# 运行用户/组
+User=www-data
+Group=www-data
+
+# 应用的工作目录
+WorkingDirectory=/opt/myapp
+
+# 绝对路径启动命令（最重要！）
+ExecStart=/usr/bin/python3 /opt/myapp/app.py
+
+# 可选：重载配置时执行的命令
+# ExecReload=
+
+# 可选：停止服务时执行的命令
+# ExecStop=/usr/bin/kill -TERM $MAINPID
+
+# 重启策略（常用 on-failure 或 always）
+#   no: 不重启
+#   on-success: 成功退出时重启
+#   on-failure: 非正常退出时重启（退出码非0）（推荐）
+#   always: 总是重启
+Restart=on-failure
+
+# 重启前等待时间
+RestartSec=5s
+
+# 可选：设置环境变量（可多次使用）
+# Environment="DEBUG=false"
+# Environment="PORT=8080"
+# EnvironmentFile=/etc/myapp/env.conf
+
+## 可选：内存限制
+# MemoryMax=1G
+# MemoryHigh=800M
+# MemoryLimit=512M
+
+## 可选：CPU 限制
+# 最多使用 1.5 个核心
+# CPUQuota=150%
+# CPU 时间权重
+# CPUWeight=50
+
+## 可选：IO 限制
+# IOWeight=20
+# DeviceAllow=/dev/nvme0n1 rw
+
+## 可选：文件系统保护
+# 禁止访问 /home /root
+# ProtectHome=yes
+# 只读访问系统目录
+# ProtectSystem=strict
+
+## 可选：能力限制
+# CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+# NoNewPrivileges=yes
+
+## 可选：命名空间隔离
+# PrivateTmp=yes
+# PrivateDevices=yes
+# PrivateUsers=yes
+
+## 定时任务替代 cron，WantedBy指定为timers.target
+# [Timer]
+# OnCalendar=daily
+# Persistent=true
+
+[Install]
+# 在系统进入运行级别模式时启动
+# 定义服务所属的 target（相当于传统运行级别）
+#   multi-user.target：级别 3，标准文本模式（无图形界面）
+#   graphical.target：级别 5，图形界面模式
+#   default.target：系统默认，通常指向 graphical.target
+#   network.target：网络就绪后启动
+#   timers.target：定时器服务
+#   sysinit.target：系统初始化早期阶段
+WantedBy=multi-user.target
+```
+
+
+
+##### 重载配置并启用服务
+
+```shell
+# 创建文件后执行：
+# 检查语法错误
+systemd-analyze verify /etc/systemd/system/hadoop.service
+# 重载 systemd 配置（必须！）
+sudo systemctl daemon-reload
+# 启用开机自启
+sudo systemctl enable hadoop.service
+# 立即启动服务
+sudo systemctl start hadoop.service
+# 检查状态
+sudo systemctl status hadoop.service
+```
+
+
+
+##### 调试与日志查看
+
+```shell
+# 实时日志
+sudo journalctl -u hadoop.service -f
+
+# 本次启动以来的日志
+sudo journalctl -u hadoop.service -b
+
+# 查看上一次启动的日志（包含上次关机记录）
+sudo journalctl -u hadoop.service -b -1
+
+journalctl -u hadoop.service -xe
+
+# 测试服务启动
+sudo systemctl start my-custom-service --dry-run
+
+# 检查服务依赖
+systemd-analyze critical-chain my-custom-service
+```
+
+
+
+
+
+##### 服务管理常用命令
+
+| 操作 | 命令 |
+|------|------|
+| 启动 | `sudo systemctl start myapp` |
+| 停止 | `sudo systemctl stop myapp` |
+| 重启 | `sudo systemctl restart myapp` |
+| 重载配置 | `sudo systemctl reload myapp`（需服务支持） |
+| 禁用开机启动 | `sudo systemctl disable myapp` |
+| 查看是否启用 | `systemctl is-enabled myapp` |
+
+
+
 ## 问题
 
 ### Shell 终端乱码
