--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1292,6 +1292,9 @@ Group=www-data
 # 应用的工作目录
 WorkingDirectory=/opt/myapp
 
+# forking类型进程需要指定进程PID
+# PIDFile=/opt/temp/hadoop/hadoop-hadoop-namenode.pid
+
 # 绝对路径启动命令（最重要！）
 ExecStart=/usr/bin/python3 /opt/myapp/app.py
 
