--- a/docs/大数据.MD
+++ b/docs/大数据.MD
@@ -78,8 +78,10 @@ sudo useradd -s /bin/bash -m hadoop
 sudo passwd hadoop
 
 sudo mkdir /opt/data/hadoop
+sudo mkdir /opt/temp/hadoop
 sudo chown -R hadoop /opt/apps/hadoop
 sudo chown -R hadoop /opt/data/hadoop
+sudo chown -R hadoop /opt/temp/hadoop
 
 # 配置管理员权限
 sudo vim /etc/sudoers
@@ -158,6 +160,8 @@ hadoop  ALL=(ALL)       ALL
 
 ```shell
 export JAVA_HOME=/opt/apps/jdk1.8.0
+export HADOOP_PID_DIR=/opt/temp/hadoop
+
 # NameNode 内存限制
 export HDFS_NAMENODE_OPTS="-Xmx4g -Xms4g"
 
