--- a/docs/大数据.MD
+++ b/docs/大数据.MD
@@ -50,6 +50,10 @@ sudo mv /opt/apps/jdk1.8.0_441 /opt/apps/jdk1.8.0
 systemctl enable ssh && systemctl start ssh
 ```
 
+
+
+### 文件部署
+
 ```shell
 scp E:\Need2Sync\Packages\Linux\Hadoop\hadoop-3.4.1.tar.gz young@192.168.31.101:/home/young/packages/
 
@@ -74,14 +78,14 @@ hadoop version
 # This command was run using /opt/apps/hadoop/share/hadoop/common/hadoop-common-3.4.1.jar
 
 # 创建运行 Hadoop 的用户
-sudo useradd -s /bin/bash -m hadoop
+sudo useradd -r -g apps -s /bin/bash -m hadoop
 sudo passwd hadoop
 
 sudo mkdir /opt/data/hadoop
 sudo mkdir /opt/temp/hadoop
-sudo chown -R hadoop /opt/apps/hadoop
-sudo chown -R hadoop /opt/data/hadoop
-sudo chown -R hadoop /opt/temp/hadoop
+sudo chown -R hadoop:apps /opt/apps/hadoop
+sudo chown -R hadoop:apps /opt/data/hadoop
+sudo chown -R hadoop:apps /opt/temp/hadoop
 
 # 配置管理员权限
 sudo vim /etc/sudoers
@@ -106,7 +110,7 @@ hadoop  ALL=(ALL)       ALL
 
 #### workers
 
-`sudo vim $HADOOP_HOME/etc/hadoop/workers `
+`vim $HADOOP_HOME/etc/hadoop/workers `
 
 ```shell
 192.168.31.102
@@ -117,7 +121,7 @@ hadoop  ALL=(ALL)       ALL
 
 #### core-site.xml
 
-`sudo vim $HADOOP_HOME/etc/hadoop/core-site.xml `
+`vim $HADOOP_HOME/etc/hadoop/core-site.xml `
 
 ```xml
     <!-- 配置 HDFS 主机地址与端口号 -->
@@ -136,7 +140,7 @@ hadoop  ALL=(ALL)       ALL
 
 #### hdfs-site.xml
 
-`sudo vim $HADOOP_HOME/etc/hadoop/hdfs-site.xml `
+`vim $HADOOP_HOME/etc/hadoop/hdfs-site.xml `
 
 ```xml
     <!-- 每个数据块复制 2 份存储 -->
@@ -156,7 +160,7 @@ hadoop  ALL=(ALL)       ALL
 
 #### hadoop-env.sh
 
-`sudo vim $HADOOP_HOME/etc/hadoop/hadoop-env.sh`
+`vim $HADOOP_HOME/etc/hadoop/hadoop-env.sh`
 
 ```shell
 export JAVA_HOME=/opt/apps/jdk1.8.0
@@ -197,17 +201,25 @@ ssh hadoop@192.168.31.102
 
 
 
-
-### 启动
+### 初始化
 
 ```shell
+# 在命名节点中
+
 su hadoop
 
-# 进入命名节点
 # 格式化 HDFS
 hdfs namenode -format
+```
 
-# 启动 HDFS
+
+
+### 服务管理
+
+#### 启动
+
+```shell
+# 只需要在在NameNode启动 HDFS，会在NameNode启动NameNode\Secondary NameNode，自动远程启动其它两台DataNode启动DataNode
 $HADOOP_HOME/sbin/start-dfs.sh
 $HADOOP_HOME/sbin/stop-dfs.sh
 # 启动分三个步骤，分别启动 NameNode、DataNode 和 Secondary NameNode
@@ -217,13 +229,295 @@ $HADOOP_HOME/sbin/stop-dfs.sh
 
 
 
-配置 systemctl 服务自动启动
+#### systemctl 
+
+1、创建启动脚本
+
+`vim /home/hadoop/start-dfs.sh.simple`
+
+`sudo chmod +x /home/hadoop/start-dfs.sh.simple`
+
+```shell
+#!/bin/bash
+
+/opt/apps/hadoop/sbin/start-dfs.sh
+PID_FILE="/opt/temp/hadoop/hadoop-hadoop-namenode.pid"
+
+sleep 5
+
+while true; do
+    # 检查文件是否存在且有内容
+    if [[ -f "$PID_FILE" && -s "$PID_FILE" ]]; then
+        # echo "文件已准备就绪"
+        sleep 10
+    else
+		exit 0
+    fi
+done
+
+exit 1
+```
+
+
+
+2、配置 systemctl 服务
+
+`sudo vim /etc/systemd/system/hadoop.service`
 
 [hadoop.service](../files/scripts/server/hadoop.service)
 
 
 
+#### 服务管理命令
+
+```shell
+# 检查语法错误
+systemd-analyze verify /etc/systemd/system/hadoop.service
+# 重载 systemd 配置
+sudo systemctl daemon-reload
+# 设置开机自启
+sudo systemctl enable hadoop
+
+# 启动
+sudo systemctl start hadoop
+# 停止
+sudo systemctl stop hadoop
+# 查看状态
+sudo systemctl status hadoop
+```
+
 
 
 # Flink
 
+
+
+## 相关概念
+
+
+
+
+
+## 安装配置
+
+[Downloads | Apache Flink](https://flink.apache.org/zh/downloads/)
+
+### Standalone-HA
+
+#### 规划
+
+服务器01： JobManager+TaskManager
+
+服务器02： JobManager+TaskManager
+
+服务器03： TaskManager
+
+
+
+#### 文件部署
+
+```shell
+scp E:\Need2Sync\Packages\Linux\Flink\flink-1.20.2-bin-scala_2.12.tgz young@192.168.31.101:/home/young/packages/
+
+cd /opt/apps/
+sudo tar -zxf /home/young/packages/flink-1.20.2-bin-scala_2.12.tgz -C ./
+sudo mv flink-1.20.2 flink
+
+# 创建运行 Hadoop 的用户
+sudo useradd -r -g apps -s /bin/bash -m flink
+sudo passwd flink
+
+sudo mkdir -p /opt/data/flink/{checkpoints,savepoints,ha,logs}
+sudo mkdir /opt/temp/flink
+sudo chown -R flink:apps /opt/apps/flink
+sudo chown -R flink:apps /opt/data/flink
+sudo chown -R flink:apps /opt/temp/flink
+
+# 配置管理员权限
+sudo vim /etc/sudoers
+flink  ALL=(ALL)       ALL
+```
+
+
+
+#### 配置
+
+##### flink-conf.yaml
+
+`vim /opt/apps/flink/conf/flink-conf.yaml`
+
+```yaml
+# 基础配置
+# These parameters are required for Java 17 support.
+# They can be safely removed when using Java 8/11.
+env.java.opts.all: --add-exports=java.base/sun.net.util=ALL-UNNAMED --add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+
+env.pid.dir: /opt/temp/flink
+
+# 配置高可用居群不需要配置 jobmanager.rpc.address，由ZK动态分配
+# jobmanager.rpc.address: localhost
+jobmanager.rpc.port: 6123
+# jobmanager.bind-host: 0.0.0.0
+jobmanager.memory.process.size: 1600m
+# taskmanager.bind-host: 0.0.0.0
+taskmanager.host: localhost
+taskmanager.memory.process.size: 2048m
+taskmanager.numberOfTaskSlots: 2
+rest.address: 0.0.0.0
+rest.port: 8081
+parallelism.default: 2
+
+# 高可用配置
+high-availability: zookeeper
+high-availability.storageDir: file:///opt/data/flink/ha
+# high-availability.storageDir: hdfs://namenode:8020/flink/ha  # HA元数据存储路径
+high-availability.zookeeper.quorum: 192.168.31.101:2181,192.168.31.102:2181,192.168.31.103:2181
+# high-availability.zookeeper.path.root: /flink
+high-availability.cluster-id: flink-cluster
+
+# 检查点配置
+state.backend: filesystem
+state.checkpoints.dir: file:///opt/data/flink/checkpoints
+# state.backend.fs.checkpointdir: hdfs://namenode:8020/flink/checkpoints
+state.savepoints.dir: file:///opt/data/flink/savepoints
+# state.backend.fs.savepointdir: hdfs://namenode:8020/flink/savepoints
+# execution.checkpointing.interval: 10000
+
+# 日志配置
+# web.log.path: /data/flink/logs
+
+# 安全配置（可选）
+# security.ssl.internal.enabled: true
+# security.ssl.internal.keystore: /opt/flink/conf/keystore.jks
+# security.ssl.internal.truststore: /opt/flink/conf/truststore.jks
+```
+
+
+
+##### masters
+
+配置 masters 文件（JobManager 节点）
+
+`vim /opt/apps/flink/conf/masters `
+
+```
+192.168.31.101:8081
+192.168.31.102:8081
+```
+
+
+
+##### workers
+
+配置 workers 文件（TaskManager 节点）
+
+`vim /opt/apps/flink/conf/workers `
+
+```
+192.168.31.101
+192.168.31.102
+192.168.31.103
+```
+
+
+
+#### 设置SSH免密登录
+
+```shell
+su flink
+# 在其中一个节点生成密钥对
+ssh-keygen -t rsa -P "" -f ~/.ssh/id_rsa
+# 并将公钥复制到所有节点（包括自己）
+ssh-copy-id -i ~/.ssh/id_rsa.pub flink@localhost
+ssh-copy-id -i ~/.ssh/id_rsa.pub flink@192.168.31.102
+ssh-copy-id -i ~/.ssh/id_rsa.pub flink@192.168.31.103
+
+# 测试，应该不需要密码
+ssh flink@192.168.31.102
+```
+
+
+
+#### 服务管理
+
+##### 启动
+
+```shell
+# 只需要在JobManager，会在JobManager启动StandaloneSessionClusterEntrypoint\TaskManagerRunner
+# 自动远程启动其它两台StandaloneSessionClusterEntrypoint\TaskManagerRunner
+/opt/apps/flink/bin/start-cluster.sh
+/opt/apps/flink/bin/stop-cluster.sh
+```
+
+
+
+##### systemctl
+
+1、创建启动脚本
+
+`vim /home/flink/start-cluster.sh.simple`
+
+`sudo chmod +x /home/flink/start-cluster.sh.simple`
+
+```shell
+#!/bin/bash
+
+/opt/apps/flink/bin/start-cluster.sh
+PID_FILE="/opt/temp/flink/flink-flink-standalonesession.pid"
+
+sleep 5
+
+while true; do
+    # 检查文件是否存在且有内容
+    if [[ -f "$PID_FILE" && -s "$PID_FILE" ]]; then
+        # echo "文件已准备就绪"
+        sleep 10
+    else
+		exit 0
+    fi
+done
+
+exit 1
+```
+
+
+
+2、配置 systemctl 服务
+
+`sudo vim /etc/systemd/system/flink.service`
+
+[flink.service](../files/scripts/server/flink.service)
+
+
+
+##### 服务管理命令
+
+```shell
+# 检查语法错误
+systemd-analyze verify /etc/systemd/system/flink.service
+# 重载 systemd 配置
+sudo systemctl daemon-reload
+# 设置开机自启
+sudo systemctl enable flink
+
+# 启动
+sudo systemctl start flink
+# 停止
+sudo systemctl stop flink
+# 查看状态
+sudo systemctl status flink
+```
+
+
+
+#### 测试
+
+访问 WebUI
+
+http://192.168.31.101:8081/#/job-manager/config
+
+
+
+执行 WC
+
+/opt/apps/flink/bin/flink run  /opt/apps/flink/examples/batch/WordCount.jar
