--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -834,13 +834,15 @@ $ sudo chown -R zookeeper:apps /var/log/zookeeper
 
 
 
-### 启动
+### 服务管理
+
+#### 启动
 
 ```shell
 # 启动
 # Usage: zkServer.sh [--config <conf-dir>] {start|start-foreground|stop|version|restart|status|print-cmd}
 sudo -u zookeeper /opt/apps/zookeeper/bin/zkServer.sh start
-ZooKeeper JMX enabled by default
+ZooKeeper JMX enabled by defaultd
 Using config: /opt/zookeeper/zookeeper/bin/../conf/zoo.cfg
 Starting zookeeper ... STARTED 
 # 查看zookeeper是否启动
@@ -853,11 +855,31 @@ cat /var/log/zookeeper/zookeeper-zookeeper-server-server01.out
 
 
 
-### 服务管理
+#### systemctl
 
-编写[脚本](../files/scripts/server/zookeeper.server)文件放在 base_dir 目录下 `/opt/apps/zookeeper/zookeeper.server`
+`sudo vim /etc/systemd/system/zookeeper.service`
 
-配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+[zookeeper.service](../files/scripts/server/zookeeper.service)
+
+
+
+#### 服务管理命令
+
+```shell
+# 检查语法错误
+systemd-analyze verify /etc/systemd/system/zookeeper.service
+# 重载 systemd 配置
+sudo systemctl daemon-reload
+# 设置开机自启
+sudo systemctl enable zookeeper
+
+# 启动
+sudo systemctl start zookeeper
+# 停止
+sudo systemctl stop zookeeper
+# 查看状态
+sudo systemctl status zookeeper
+```
 
 
 
