--- a/solid/服务.MD
+++ b/solid/服务.MD
@@ -2100,6 +2100,8 @@ $ sudo chown -R kafka:apps /opt/data/kafka
 
 #### 配置
 
+##### server.properties
+
 /opt/apps/kafka/config/server.properties
 
 broker.id
@@ -2244,7 +2246,9 @@ group.initial.rebalance.delay.ms=0
 
 
 
-#### 启动
+#### 服务管理
+
+##### 启动
 
 ```shell
 sudo -u kafka /opt/apps/kafka/bin/kafka-server-start.sh /opt/apps/kafka/config/server.properties
@@ -2261,11 +2265,31 @@ young@server-1:~$ jps -l
 
 
 
-#### 服务管理
+##### systemctl
 
-编写[脚本](../files/scripts/server/kafka.server)文件放在 base_dir 目录下 `/opt/apps/kafka/kafka.server`
+`sudo vim /etc/systemd/system/kafka.service`
 
-配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+[kafka.service](../files/scripts/server/kafka.service)
+
+
+
+##### 服务管理命令
+
+```shell
+# 检查语法错误
+systemd-analyze verify /etc/systemd/system/kafka.service
+# 重载 systemd 配置
+sudo systemctl daemon-reload
+# 设置开机自启
+sudo systemctl enable kafka
+
+# 启动
+sudo systemctl start kafka
+# 停止
+sudo systemctl stop kafka
+# 查看状态
+sudo systemctl status kafka
+```
 
 
 
