--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -644,6 +644,22 @@ sudo groupadd appgroup
 
 [通过20个实例掌握 Linux PS 命令 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/583560458)
 
+```shell
+# 用标准格式展示系统中的每个进程
+ps -ef
+
+# 用BSD格式展示系统中的每个进程
+ps -aux
+
+# 展示进程树
+ps -ejH
+
+# 进程启动命令包含关键字的PID
+PID=$(ps -eo pid,cmd | fgrep -i "key" | grep -v grep | awk '{print $1}')
+```
+
+
+
 
 
 #### 文件/磁盘
@@ -1243,7 +1259,7 @@ exit 0
 
 
 
-#### 自定义systemctl服务
+### 自定义systemctl服务
 
 服务单元文件存放位置
 
@@ -1255,7 +1271,7 @@ systemd服务单元文件通常存放在以下两个目录之一：
 
 
 
-##### 创建服务单元文件
+#### 创建服务单元文件
 
 ```shell
 [Unit]
@@ -1368,7 +1384,7 @@ WantedBy=multi-user.target
 
 
 
-##### 重载配置并启用服务
+#### 重载配置并启用服务
 
 ```shell
 # 创建文件后执行：
@@ -1386,7 +1402,7 @@ sudo systemctl status hadoop.service
 
 
 
-##### 调试与日志查看
+#### 调试与日志查看
 
 ```shell
 # 实时日志
@@ -1411,7 +1427,7 @@ systemd-analyze critical-chain my-custom-service
 
 
 
-##### 服务管理常用命令
+#### 服务管理常用命令
 
 | 操作 | 命令 |
 |------|------|
@@ -1421,6 +1437,38 @@ systemd-analyze critical-chain my-custom-service
 | 重载配置 | `sudo systemctl reload myapp`（需服务支持） |
 | 禁用开机启动 | `sudo systemctl disable myapp` |
 | 查看是否启用 | `systemctl is-enabled myapp` |
+
+
+
+### 定时关机
+
+`sudo vim /etc/crontab`
+
+```shell
+# /etc/crontab: system-wide crontab
+# Unlike any other crontab you don't have to run the `crontab'
+# command to install the new version when you edit this file
+# and files in /etc/cron.d. These files also have username fields,
+# that none of the other crontabs do.
+
+SHELL=/bin/sh
+PATH=/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin
+
+# Example of job definition:
+# .---------------- minute (0 - 59)
+# |  .------------- hour (0 - 23)
+# |  |  .---------- day of month (1 - 31)
+# |  |  |  .------- month (1 - 12) OR jan,feb,mar,apr ...
+# |  |  |  |  .---- day of week (0 - 6) (Sunday=0 or 7) OR sun,mon,tue,wed,thu,fri,sat
+# |  |  |  |  |
+# *  *  *  *  * user-name command to be executed
+17 *	* * *	root    cd / && run-parts --report /etc/cron.hourly
+25 6	* * *	root	test -x /usr/sbin/anacron || ( cd / && run-parts --report /etc/cron.daily )
+47 6	* * 7	root	test -x /usr/sbin/anacron || ( cd / && run-parts --report /etc/cron.weekly )
+52 6	1 * *	root	test -x /usr/sbin/anacron || ( cd / && run-parts --report /etc/cron.monthly )
+# 定时关机
+00 1	* * *	root	shutdown now
+```
 
 
 
