--- a/docs/大数据.MD
+++ b/docs/大数据.MD
@@ -506,13 +506,16 @@ cd /opt/apps/
 sudo tar -zxvf /home/young/packages/apache-hive-4.0.1-bin.tar.gz -C ./
 sudo mv apache-hive-4.0.1-bin hive
 
+cp /home/young/packages/mysql-connector-j-8.0.31.jar /opt/apps/hive/lib/
+
 # 创建运行 Hive 的用户
 sudo useradd -r -g apps -s /bin/bash -m hive
 sudo passwd hive
 
 # sudo mkdir /opt/data/hadoop
-# sudo mkdir /opt/temp/hadoop
-sudo chown -R hadoop:apps /opt/apps/hive
+sudo mkdir /var/log/hive
+sudo chown -R hive:apps /opt/apps/hive
+sudo chown -R hive:apps /var/log/hive
 # sudo chown -R hadoop:apps /opt/data/hadoop
 # sudo chown -R hadoop:apps /opt/temp/hadoop
 ```
@@ -520,10 +523,6 @@ sudo chown -R hadoop:apps /opt/apps/hive
 
 
 ### 配置
-
-
-
-
 
 #### 环境变量
 
@@ -538,18 +537,133 @@ export PATH=$PATH:$HIVE_HOME/bin
 
 
 
+#### hive-site.xml
+
+`vim $HIVE_HOME/conf/hive-site.xml`
+
+如果不存在，可以从模板复制
+
+`cp $HIVE_HOME/conf/hive-default.xml.template $HIVE_HOME/conf/hive-site.xml`
+
+```xml
+<configuration>
+  <!-- Hive 元数据存储位置 -->
+  <property>
+    <name>hive.metastore.warehouse.dir</name>
+    <value>/user/hive/warehouse</value>
+  </property>
+  
+  <!-- MySQL 数据库连接配置 -->
+  <property>
+    <name>javax.jdo.option.ConnectionURL</name>
+    <value>jdbc:mysql://192.168.31.101:3306/hive_metastore?createDatabaseIfNotExist=true&amp;useSSL=false</value>
+  </property>
+  
+  <property>
+    <name>javax.jdo.option.ConnectionDriverName</name>
+    <value>com.mysql.cj.jdbc.Driver</value>
+  </property>
+  
+  <property>
+    <name>javax.jdo.option.ConnectionUserName</name>
+    <value>app_user</value>
+  </property>
+  
+  <property>
+    <name>javax.jdo.option.ConnectionPassword</name>
+    <value>hivepassword</value>
+  </property>
+  
+  <!-- 禁用元数据验证（可选，用于避免版本冲突） -->
+  <property>
+    <name>hive.metastore.schema.verification</name>
+    <value>false</value>
+  </property>
+  
+  <!-- 时区配置（MySQL 8.x 需要） -->
+  <property>
+    <name>hive.metastore.db.time.zone</name>
+    <value>UTC</value>
+  </property>
+  
+  <!-- 其他优化配置 -->
+  <property>
+    <name>hive.exec.scratchdir</name>
+    <value>/temp/hive</value>
+  </property>
+  
+  <property>
+    <name>hive.server2.logging.operation.enabled</name>
+    <value>false</value>
+  </property>
+</configuration>
+```
+
+
+
+#### hive-log4j2.properties
+
+`vim $HIVE_HOME/conf/hive-log4j2.properties`
+
+```properties
+property.hive.log.level = INFO
+property.hive.log.dir = /var/log/hive
+```
+
+
+
 #### Hadoop 权限
 
 ```shell
 # 创建 Hive 在 HDFS 上的工作目录
 hadoop fs -mkdir -p /user/hive/warehouse
-hadoop fs -mkdir -p /tmp
+hadoop fs -mkdir -p /temp
 
 # 赋予读写权限
 hadoop fs -chmod g+w /user/hive/warehouse
-hadoop fs -chmod g+w /tmp
+hadoop fs -chmod g+w /temp
 #  根据实际用户修改
 hadoop fs -chown -R hive:apps /user/hive
+```
+
+
+
+### 初始化
+
+```shell
+# 初始化 MySQL 元数据库
+schematool -dbType mysql -initSchema
+
+## 成功后会显示
+# Initialization script completed
+# schemaTool completed
+```
+
+
+
+### 服务管理
+
+#### 启动
+
+```shell
+# 启动 Metastore 服务（后台运行）
+hive --service metastore &
+```
+
+
+
+#### systemctl
+
+`sudo vim /etc/systemd/system/hive.service`
+
+[hive.service](../files/scripts/server/hive.service)
+
+
+
+#### 服务管理命令
+
+```shell
+
 ```
 
 
